// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ol run correctly 1`] = `
Array [
  "1",
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  "Item 1
",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
            ],
            "props": Object {},
            "type": "p",
          },
        ],
        "props": Object {},
        "type": "li",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  "Item 2",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
              Object {
                "children": Array [
                  "
",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
            ],
            "props": Object {},
            "type": "p",
          },
        ],
        "props": Object {},
        "type": "li",
      },
    ],
    "props": Object {},
    "type": "ol",
  },
]
`;

exports[`renderList nesting level 0 run correctly 1`] = `
Array [
  "1",
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  "Item 1
",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
            ],
            "props": Object {},
            "type": "p",
          },
        ],
        "props": Object {},
        "type": "li",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  "Item 2",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
              Object {
                "children": Array [
                  "
",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
            ],
            "props": Object {},
            "type": "p",
          },
        ],
        "props": Object {},
        "type": "li",
      },
    ],
    "props": Object {},
    "type": "ol",
  },
]
`;

exports[`renderList nesting level 1 run correctly 1`] = `
Array [
  "3",
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  "Item 1
",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
            ],
            "props": Object {},
            "type": "p",
          },
        ],
        "props": Object {},
        "type": "li",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      "Nested item 1
",
                    ],
                    "props": Object {
                      "style": Object {
                        "fontSize": "12px",
                      },
                    },
                    "type": "span",
                  },
                ],
                "props": Object {},
                "type": "p",
              },
            ],
            "props": Object {},
            "type": "li",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      "Nested item 2
",
                    ],
                    "props": Object {
                      "style": Object {
                        "fontSize": "12px",
                      },
                    },
                    "type": "span",
                  },
                ],
                "props": Object {},
                "type": "p",
              },
            ],
            "props": Object {},
            "type": "li",
          },
        ],
        "props": Object {},
        "type": "ul",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  "Item 2",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
              Object {
                "children": Array [
                  "
",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
            ],
            "props": Object {},
            "type": "p",
          },
        ],
        "props": Object {},
        "type": "li",
      },
    ],
    "props": Object {},
    "type": "ul",
  },
]
`;

exports[`renderList nesting level 2 run correctly 1`] = `
Array [
  "5",
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  "Item 1
",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
            ],
            "props": Object {},
            "type": "p",
          },
        ],
        "props": Object {},
        "type": "li",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      "Nested item 1
",
                    ],
                    "props": Object {
                      "style": Object {
                        "fontSize": "12px",
                      },
                    },
                    "type": "span",
                  },
                ],
                "props": Object {},
                "type": "p",
              },
            ],
            "props": Object {},
            "type": "li",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          "Nested nested item 1
",
                        ],
                        "props": Object {
                          "style": Object {
                            "fontSize": "12px",
                          },
                        },
                        "type": "span",
                      },
                    ],
                    "props": Object {},
                    "type": "p",
                  },
                ],
                "props": Object {},
                "type": "li",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          "Nested nested item 2
",
                        ],
                        "props": Object {
                          "style": Object {
                            "fontSize": "12px",
                          },
                        },
                        "type": "span",
                      },
                    ],
                    "props": Object {},
                    "type": "p",
                  },
                ],
                "props": Object {},
                "type": "li",
              },
            ],
            "props": Object {},
            "type": "ul",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      "Nested item 2
",
                    ],
                    "props": Object {
                      "style": Object {
                        "fontSize": "12px",
                      },
                    },
                    "type": "span",
                  },
                ],
                "props": Object {},
                "type": "p",
              },
            ],
            "props": Object {},
            "type": "li",
          },
        ],
        "props": Object {},
        "type": "ul",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  "Item 2",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
              Object {
                "children": Array [
                  "
",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
            ],
            "props": Object {},
            "type": "p",
          },
        ],
        "props": Object {},
        "type": "li",
      },
    ],
    "props": Object {},
    "type": "ul",
  },
]
`;

exports[`ul run correctly 1`] = `
Array [
  "1",
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  "Item 1
",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
            ],
            "props": Object {},
            "type": "p",
          },
        ],
        "props": Object {},
        "type": "li",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  "Item 2",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
              Object {
                "children": Array [
                  "
",
                ],
                "props": Object {
                  "style": Object {
                    "fontSize": "12px",
                  },
                },
                "type": "span",
              },
            ],
            "props": Object {},
            "type": "p",
          },
        ],
        "props": Object {},
        "type": "li",
      },
    ],
    "props": Object {},
    "type": "ul",
  },
]
`;
